# agt-sea

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.archive/workplans/: workplan-multi-stage-creative-pipeline_2026-04-19.md
briefs/: sample_brief_001.txt
docs/: SPEC-multipage.md  architecture.md  architecture_v2.md
docs/adr/: 0001-langgraph-for-orchestration.md  0002-langchain-llm-abstraction.md  0003-pydantic-state-modelling.md  0004-structured-output-cd-evaluation.md  0005-streamlit-frontend.md  0006-iterative-loop-design.md  0007-revised-loop-thresholds.md  0008-multipage-frontend.md  0009-llm-override-mechanism.md  0010-prompt-injection-pattern.md  0011-rehydrate-at-boundary.md  0012-error-handling-and-graceful-degradation.md  0013-demo-abuse-mitigation.md  0014-multi-stage-creative-pipeline.md  README.md
docs/specs/: README.md
docs/workplans/: README.md  phase-6.1-error-handling.md
frontend/: app.py  app_crystal.py
frontend/components/: agent_output.py  error_state.py  footer.py  history.py  labels.py  progress.py  run_guard.py  run_metadata.py  sidebar.py  synthesis_output.py  territory_cards.py
frontend/pages/: agnostic.py  creative.py  marketing.py  production.py  strategy.py  tools.py  workflow.py
frontend/themes/: b3ta.css
notebooks/: 01_project-definition.ipynb
tests/: _helpers.py  archive_test_strategist.py  test_cd_grader_st2.py  test_cd_synthesis.py  test_creative.py  test_creative1.py  test_creative2.py  test_creative_a_st2.py  test_creative_b_st2.py  test_creative_director_retry.py  test_creative_st1.py  test_llm_provider.py  test_pipeline.py  test_pipeline_failure.py  test_pipeline_st1.py  test_pipeline_st2.py  test_pipeline_v2.py  test_run_guard.py  test_strategist.py  test_strategist_st1.py  test_strategist_st2.py
(+51 files in other folders)
