[project]
name = "agt-sea"
version = "0.1.0"
description = "An interactive creative agency framework powered by AI agents"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Manual integration scripts (real LLM calls) live alongside unit tests but
# import sibling helpers as scripts, so pytest cannot collect them. Run them
# directly with `uv run python tests/test_<name>.py`.
testpaths = ["tests"]
norecursedirs = [".archive"]
addopts = [
    "--ignore=tests/test_strategist_st1.py",
    "--ignore=tests/test_strategist_st2.py",
    "--ignore=tests/test_creative_st1.py",
    "--ignore=tests/test_creative_a_st2.py",
    "--ignore=tests/test_creative_b_st2.py",
    "--ignore=tests/test_pipeline_st1.py",
    "--ignore=tests/test_pipeline_st2.py",
]